Add new content to index.html

--- a/index.html
+++ b/index.html
@@ -1,1 +1,3 @@
-<p> Hello World kaise ho <p>
+<p> Hello World kaise ho.            </p>
+<b> Github lecture.                  </b>
+<u> Git and Github by Shraddha Didi. </u>
